tests/miniJava/neg/000199_mutation.MiniJava
class java { public static return void Main ( String [ ] java ) { { } } }
